syntax = "proto3"; // 指定proto版本
package hello;     // 指定包名

// option go_package = "prefix"; 可选前缀

// 定义Hello服务
service Hello {
	// SayHello 定义SayHello方法
	rpc SayHello(HelloRequest) returns (HelloResponse) {}
	// 设置了 stream 代表允许无认证访问
	rpc GetExample(stream HelloRequest) returns (HelloResponse) {}
	rpc PostExample(HelloRequest) returns (stream HelloResponse) {}
	rpc PostFormExample(HelloRequest) returns (HelloResponse) {}

	rpc Timeout(HelloRequest) returns (HelloResponse) {}
}

// HelloRequest 请求结构
message HelloRequest {
	string name = 4;
}

// HelloResponse 响应结构
message HelloResponse {
    string message = 1;
}